src/objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Customer_Material_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Material Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Configuration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Configuration__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Product Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>